--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
-    "files.exclude": {
-        "*.zip": true,
-        "bin": true,
-        "obj": true,
-        "publish": true
-    }
+  "files.exclude": {
+    "bin": true,
+    "obj": true
+  }
 }
